--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="favicon" href="./images/favicon.cc">
+    <link rel="apple-touch-icon" href="./images/icon-touch-retina.png">
+    <link rel="apple-touch-icon" href="./images/icon-touch-retina-iphone.png">
+    <link rel="apple-touch-icon" href="./images/icon-touch-retina-ipad.png">
     <title>ProntoCloud</title>
 
 </head>
@@ -92,7 +96,7 @@
         <footer>
             <div class="container">
                 <p>&copy; ProntoCloud. Todos os direitos reservados.
-            <small>Desenvolvido por: Marcelo Cavalcante</small></p>
+            <small>Desenvolvido por: Rafael Dutra</small></p>
             </div>
         </footer>
     </div>
