--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="favicon" href="./images/favicon.cc">
     <link rel="apple-touch-icon" href="./images/icon-touch-retina.png">
     <link rel="apple-touch-icon" href="./images/icon-touch-retina-iphone.png">
     <link rel="apple-touch-icon" href="./images/icon-touch-retina-ipad.png">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+
     <title>ProntoCloud</title>
+   
 
 </head>
 <body>
