--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
     <title>ProntoCloud</title>
    
-
 </head>
 <body>
 
@@ -39,8 +38,10 @@
                     <div class="container">
                         <h1>Planejamento para criação de sites</h1>
 
+                        
+                        <div class="imagem">
                         <img src="./images/web-design-planning-700x300.jpg" alt="Planejamento para criação de sites">
-
+                       </div>
                         <h2>Guia de criação de sites</h2>
 
                         <p>Você provavelmente está lendo aqui por que está pensando em fazer um novo site, se é a primeira vez muitas dúvidas podem surgir, e caso isso aconteça, pode entrar em contato com a gente. Mas antes pode avaliar cada etapa do nosso passo-a-passo:</p>
