git commit pronto

--- a/newsletter.html
+++ b/newsletter.html
@@ -20,7 +20,7 @@
             height: auto;
         }
 
-        @media screen and (max-width: 800px) {
+        @media  (max-width: 800px) {
             table {
                 width: 100% !important;
                 min-width: 320px;
